# spbu-mm-parallel-programming

./: .gitignore  LICENSE
Kleshchin_Anton/producers_and_consumers/: Makefile  README.md  run
Kleshchin_Anton/thread_pool/: Makefile  README.md
ProducerConsumer/: ProducerConsumer.sln  README.md  main.cpp  producerConsumer.sln
ProducerConsumer/ProducerConsumer/: Buffer.cs  Consumer.cs  Either.cs  IBuffer.cs  IQueue.cs  Locker.cs  Producer.cs  ProducerConsumer.csproj  (+3 more)
ProducerConsumer/ProducerConsumer.Tests/: ProducerConsumer.Tests.csproj  Tests.cs
ProducersConsumers/: ProducersConsumers.sln  README.md
ThreadPool/: CMakeLists.txt  README.md  ThreadPool.sln  main.cpp
ThreadPool/ThreadPool/: DEQueue.cs  IMyTask.cs  Maybe.cs  MyTask.cs  MyThreadPool.cs  Program.cs  ThreadPool.cs  ThreadPool.csproj
ThreadPool/ThreadPool/MyTask/: IMyTask.cs  MyTask.cs
ThreadPool/ThreadPool/Properties/: AssemblyInfo.cs
ThreadPool/ThreadPoolTest/: ThreadPoolTest.cs  ThreadPoolTest.csproj
ThreadPool/ThreadPoolTest/Properties/: AssemblyInfo.cs
ThreadPool/src/: IMyTask.cpp  IMyTask.h  ThreadPool.cpp  ThreadPool.h
Tyuleneva Emiliya/: header.h
producer-consumer/: Buffer.h  CMakeLists.txt  Consumer.h  Producer.h  README.md  TestRunner.h  Worker.h  main.cpp
producers-consumers/: README.md  settings.gradle
task1/: CMakeLists.txt  README.md  buffer.h  build.sh  main.cpp  workers.h
task2/: CMakeLists.txt  README.md  Task.h  ThreadPool.h  ThreadSafeDeque.h  Utils.h  main.cpp
thread-pool/: CMakeLists.txt  README.md  Task.h  TestRunner.h  ThreadPool.h  build.gradle  main.cpp
(+60 files in other folders)
